--- a/firebase.json
+++ b/firebase.json
@@ -21,6 +21,21 @@
     "singleProjectMode": true,
     "firestore": {
       "port": 8080
+    },
+    "auth": {
+      "port": 9099
+    },
+    "database": {
+      "port": 9000
+    },
+    "pubsub": {
+      "port": 8085
+    },
+    "storage": {
+      "port": 9199
+    },
+    "hosting": {
+      "port": 5000
     }
   }
 }
